@@ -43,7 +43,7 @@ compiler. This is generally faster than parsing the Java source.</p>
 
 <p>
 To learn more about how this information is obtained from the class files, 
-please refer to <a href="http://java.sun.com/docs/books/jvms/">the Java 
+please refer to <a href="http://docs.oracle.com/javase/specs/">the Java
 Virtual Machine Specification</a>
 </p>
 
